dfir_rs/tests/snapshots/surface_stratum__difference_a@graphvis_dot.snap
---
source: hydroflow/tests/surface_stratum.rs
expression: "df.meta_graph().unwrap().to_dot(&Default::default())"
---
digraph {
    node [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace", style=filled];
    edge [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace"];
    n1v1 [label="(n1v1) difference()", shape=invhouse, fillcolor="#88aaff"]
    n2v1 [label="(n2v1) source_iter([1, 2, 3, 4])", shape=invhouse, fillcolor="#88aaff"]
    n3v1 [label="(n3v1) source_iter([1, 3, 5, 7])", shape=invhouse, fillcolor="#88aaff"]
    n4v1 [label="(n4v1) for_each(|x| output_inner.borrow_mut().insert(x))", shape=house, fillcolor="#ffff88"]
    n5v1 [label="(n5v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n2v1 -> n1v1 [label="pos"]
    n3v1 -> n5v1
    n1v1 -> n4v1
    n5v1 -> n1v1 [label="neg", color=red]
    subgraph "cluster n1v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_1v1\nstratum 0"
        n3v1
    }
    subgraph "cluster n2v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_2v1\nstratum 1"
        n2v1
        n1v1
        n4v1
        subgraph "cluster_sg_2v1_var_a" {
            label="var a"
            n1v1
        }
    }
}

