dfir_rs/tests/snapshots/surface_stratum__difference_a@graphvis_mermaid.snap
---
source: hydroflow/tests/surface_stratum.rs
expression: "df.meta_graph().unwrap().to_mermaid(&Default::default())"
---
%%{init:{'theme':'base','themeVariables':{'clusterBkg':'#ddd','clusterBorder':'#888'}}}%%
flowchart TD
classDef pullClass fill:#8af,stroke:#000,text-align:left,white-space:pre
classDef pushClass fill:#ff8,stroke:#000,text-align:left,white-space:pre
classDef otherClass fill:#fdc,stroke:#000,text-align:left,white-space:pre
linkStyle default stroke:#aaa
1v1[\"(1v1) <code>difference()</code>"/]:::pullClass
2v1[\"(2v1) <code>source_iter([1, 2, 3, 4])</code>"/]:::pullClass
3v1[\"(3v1) <code>source_iter([1, 3, 5, 7])</code>"/]:::pullClass
4v1[/"(4v1) <code>for_each(|x| output_inner.borrow_mut().insert(x))</code>"\]:::pushClass
5v1["(5v1) <code>handoff</code>"]:::otherClass
2v1-->|pos|1v1
3v1-->5v1
1v1-->4v1
5v1--x|neg|1v1; linkStyle 3 stroke:red
subgraph sg_1v1 ["sg_1v1 stratum 0"]
    3v1
end
subgraph sg_2v1 ["sg_2v1 stratum 1"]
    2v1
    1v1
    4v1
    subgraph sg_2v1_var_a ["var <tt>a</tt>"]
        1v1
    end
end

