dfir_rs/tests/snapshots/surface_stratum__difference_b@graphvis_mermaid.snap
---
source: hydroflow/tests/surface_stratum.rs
expression: "df.meta_graph().unwrap().to_mermaid(&Default::default())"
---
%%{init:{'theme':'base','themeVariables':{'clusterBkg':'#ddd','clusterBorder':'#888'}}}%%
flowchart TD
classDef pullClass fill:#8af,stroke:#000,text-align:left,white-space:pre
classDef pushClass fill:#ff8,stroke:#000,text-align:left,white-space:pre
classDef otherClass fill:#fdc,stroke:#000,text-align:left,white-space:pre
linkStyle default stroke:#aaa
1v1[\"(1v1) <code>difference()</code>"/]:::pullClass
2v1[\"(2v1) <code>source_stream(inp_recv)</code>"/]:::pullClass
3v1[/"(3v1) <code>tee()</code>"\]:::pushClass
4v1[\"(4v1) <code>defer_tick()</code>"/]:::pullClass
5v1[/"(5v1) <code>for_each(|x| output_inner.borrow_mut().insert(x))</code>"\]:::pushClass
6v1["(6v1) <code>handoff</code>"]:::otherClass
7v1["(7v1) <code>handoff</code>"]:::otherClass
8v1["(8v1) <code>handoff</code>"]:::otherClass
2v1-->8v1
1v1-->3v1
4v1-->6v1
3v1-->|0|7v1
3v1-->|1|5v1
6v1--x|neg|1v1; linkStyle 5 stroke:red
7v1--o4v1; linkStyle 6 stroke:red
8v1-->|pos|1v1
subgraph sg_1v1 ["sg_1v1 stratum 0"]
    4v1
end
subgraph sg_2v1 ["sg_2v1 stratum 1"]
    1v1
    3v1
    5v1
    subgraph sg_2v1_var_a ["var <tt>a</tt>"]
        1v1
    end
    subgraph sg_2v1_var_b ["var <tt>b</tt>"]
        3v1
    end
end
subgraph sg_3v1 ["sg_3v1 stratum 0"]
    2v1
end

