dfir_rs/tests/snapshots/surface_stratum__subgraph_stratum_consolidation@graphvis_dot.snap
---
source: hydroflow/tests/surface_stratum.rs
expression: "df.meta_graph().unwrap().to_dot(&Default::default())"
---
digraph {
    node [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace", style=filled];
    edge [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace"];
    n1v1 [label="(n1v1) union()", shape=invhouse, fillcolor="#88aaff"]
    n2v1 [label="(n2v1) tee()", shape=house, fillcolor="#ffff88"]
    n3v1 [label="(n3v1) union()", shape=invhouse, fillcolor="#88aaff"]
    n4v1 [label="(n4v1) tee()", shape=house, fillcolor="#ffff88"]
    n5v1 [label="(n5v1) union()", shape=invhouse, fillcolor="#88aaff"]
    n6v1 [label="(n6v1) tee()", shape=house, fillcolor="#ffff88"]
    n7v1 [label="(n7v1) union()", shape=invhouse, fillcolor="#88aaff"]
    n8v1 [label="(n8v1) for_each(|x| output_inner.borrow_mut().push(x))", shape=house, fillcolor="#ffff88"]
    n9v1 [label="(n9v1) source_iter([0])", shape=invhouse, fillcolor="#88aaff"]
    n10v1 [label="(n10v1) source_iter([1])", shape=invhouse, fillcolor="#88aaff"]
    n11v1 [label="(n11v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n12v1 [label="(n12v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n13v1 [label="(n13v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n14v1 [label="(n14v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n15v1 [label="(n15v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n16v1 [label="(n16v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n1v1 -> n2v1
    n3v1 -> n4v1
    n5v1 -> n6v1
    n7v1 -> n8v1
    n6v1 -> n11v1 [label="0"]
    n4v1 -> n12v1 [label="0"]
    n2v1 -> n13v1 [label="0"]
    n9v1 -> n1v1 [label="0"]
    n6v1 -> n14v1 [label="1"]
    n4v1 -> n15v1 [label="1"]
    n2v1 -> n16v1 [label="1"]
    n10v1 -> n1v1 [label="1"]
    n11v1 -> n7v1 [label="0"]
    n12v1 -> n5v1 [label="0"]
    n13v1 -> n3v1 [label="0"]
    n14v1 -> n7v1 [label="1"]
    n15v1 -> n5v1 [label="1"]
    n16v1 -> n3v1 [label="1"]
    subgraph "cluster n1v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_1v1\nstratum 0"
        n9v1
        n10v1
        n1v1
        n2v1
        subgraph "cluster_sg_1v1_var_a" {
            label="var a"
            n1v1
            n2v1
        }
    }
    subgraph "cluster n2v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_2v1\nstratum 0"
        n3v1
        n4v1
        subgraph "cluster_sg_2v1_var_b" {
            label="var b"
            n3v1
            n4v1
        }
    }
    subgraph "cluster n3v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_3v1\nstratum 0"
        n5v1
        n6v1
        subgraph "cluster_sg_3v1_var_c" {
            label="var c"
            n5v1
            n6v1
        }
    }
    subgraph "cluster n4v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_4v1\nstratum 0"
        n7v1
        n8v1
        subgraph "cluster_sg_4v1_var_d" {
            label="var d"
            n7v1
            n8v1
        }
    }
}

