dfir_rs/tests/snapshots/surface_stratum__surface_syntax_graph_unreachability@graphvis_mermaid.snap
---
source: hydroflow/tests/surface_stratum.rs
expression: "df.meta_graph().unwrap().to_mermaid(&Default::default())"
---
%%{init:{'theme':'base','themeVariables':{'clusterBkg':'#ddd','clusterBorder':'#888'}}}%%
flowchart TD
classDef pullClass fill:#8af,stroke:#000,text-align:left,white-space:pre
classDef pushClass fill:#ff8,stroke:#000,text-align:left,white-space:pre
classDef otherClass fill:#fdc,stroke:#000,text-align:left,white-space:pre
linkStyle default stroke:#aaa
1v1[\"(1v1) <code>union()</code>"/]:::pullClass
2v1[\"(2v1) <code>map(|v| (v, ()))</code>"/]:::pullClass
3v1[\"(3v1) <code>source_iter(vec![0])</code>"/]:::pullClass
4v1[\"(4v1) <code>source_stream(pairs_recv)</code>"/]:::pullClass
5v1[/"(5v1) <code>tee()</code>"\]:::pushClass
6v1[\"(6v1) <code>join()</code>"/]:::pullClass
7v1[\"(7v1) <code>map(|(_src, ((), dst))| dst)</code>"/]:::pullClass
8v1[\"(8v1) <code>map(|x| x)</code>"/]:::pullClass
9v1[\"(9v1) <code>map(|x| x)</code>"/]:::pullClass
10v1[/"(10v1) <code>tee()</code>"\]:::pushClass
11v1[\"(11v1) <code>difference()</code>"/]:::pullClass
12v1[/"(12v1) <code>for_each(|x| println!(&quot;Not reached: {}&quot;, x))</code>"\]:::pushClass
13v1[\"(13v1) <code>flat_map(|(a, b)| [a, b])</code>"/]:::pullClass
14v1["(14v1) <code>handoff</code>"]:::otherClass
15v1["(15v1) <code>handoff</code>"]:::otherClass
16v1["(16v1) <code>handoff</code>"]:::otherClass
17v1["(17v1) <code>handoff</code>"]:::otherClass
1v1-->2v1
3v1-->|0|1v1
4v1-->5v1
9v1-->10v1
8v1-->9v1
7v1-->8v1
6v1-->7v1
2v1-->|0|6v1
5v1-->|1|14v1
10v1-->|0|15v1
11v1-->12v1
13v1-->|pos|11v1
5v1-->|0|16v1
10v1-->|1|17v1
14v1-->|1|6v1
15v1-->|1|1v1
16v1-->13v1
17v1--x|neg|11v1; linkStyle 17 stroke:red
subgraph sg_1v1 ["sg_1v1 stratum 0"]
    4v1
    5v1
    subgraph sg_1v1_var_edges ["var <tt>edges</tt>"]
        4v1
        5v1
    end
end
subgraph sg_2v1 ["sg_2v1 stratum 0"]
    15v1
    3v1
    1v1
    2v1
    6v1
    7v1
    8v1
    9v1
    10v1
    subgraph sg_2v1_var_my_join_tee ["var <tt>my_join_tee</tt>"]
        6v1
        7v1
        8v1
        9v1
        10v1
    end
    subgraph sg_2v1_var_reached_vertices ["var <tt>reached_vertices</tt>"]
        1v1
        2v1
    end
end
subgraph sg_3v1 ["sg_3v1 stratum 1"]
    13v1
    11v1
    12v1
    subgraph sg_3v1_var_diff ["var <tt>diff</tt>"]
        11v1
        12v1
    end
end

