dfir_rs/tests/snapshots/surface_stratum__tick_loop_3@graphvis_mermaid.snap
---
source: hydroflow/tests/surface_stratum.rs
expression: "df.meta_graph().unwrap().to_mermaid(&Default::default())"
---
%%{init:{'theme':'base','themeVariables':{'clusterBkg':'#ddd','clusterBorder':'#888'}}}%%
flowchart TD
classDef pullClass fill:#8af,stroke:#000,text-align:left,white-space:pre
classDef pushClass fill:#ff8,stroke:#000,text-align:left,white-space:pre
classDef otherClass fill:#fdc,stroke:#000,text-align:left,white-space:pre
linkStyle default stroke:#aaa
1v1[\"(1v1) <code>union()</code>"/]:::pullClass
2v1[/"(2v1) <code>tee()</code>"\]:::pushClass
3v1[\"(3v1) <code>source_iter([1, 3])</code>"/]:::pullClass
4v1[\"(4v1) <code>defer_tick()</code>"/]:::pullClass
5v1[\"(5v1) <code>defer_tick()</code>"/]:::pullClass
6v1[\"(6v1) <code>defer_tick()</code>"/]:::pullClass
7v1[\"(7v1) <code>map(|x| 2 * x)</code>"/]:::pullClass
8v1[/"(8v1) <code>for_each(|x| output_inner.borrow_mut().push(x))</code>"\]:::pushClass
9v1["(9v1) <code>handoff</code>"]:::otherClass
10v1["(10v1) <code>handoff</code>"]:::otherClass
11v1["(11v1) <code>handoff</code>"]:::otherClass
12v1[\"(12v1) <code>identity()</code>"/]:::pullClass
13v1["(13v1) <code>handoff</code>"]:::otherClass
14v1[\"(14v1) <code>identity()</code>"/]:::pullClass
15v1["(15v1) <code>handoff</code>"]:::otherClass
16v1[\"(16v1) <code>identity()</code>"/]:::pullClass
17v1["(17v1) <code>handoff</code>"]:::otherClass
1v1-->2v1
3v1-->|0|1v1
7v1-->|1|1v1
6v1-->7v1
5v1-->9v1
4v1-->10v1
2v1-->|0|11v1
2v1-->|1|8v1
9v1-->12v1
10v1-->14v1
11v1-->16v1
12v1-->13v1
13v1--o6v1; linkStyle 12 stroke:red
14v1-->15v1
15v1--o5v1; linkStyle 14 stroke:red
16v1-->17v1
17v1--o4v1; linkStyle 16 stroke:red
subgraph sg_1v1 ["sg_1v1 stratum 0"]
    4v1
end
subgraph sg_2v1 ["sg_2v1 stratum 0"]
    5v1
end
subgraph sg_3v1 ["sg_3v1 stratum 0"]
    3v1
    6v1
    7v1
    1v1
    2v1
    8v1
    subgraph sg_3v1_var_a ["var <tt>a</tt>"]
        1v1
        2v1
    end
end
subgraph sg_4v1 ["sg_4v1 stratum 1"]
    12v1
end
subgraph sg_5v1 ["sg_5v1 stratum 1"]
    14v1
end
subgraph sg_6v1 ["sg_6v1 stratum 1"]
    16v1
end

